--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "knex": " tsx ./node_modules/knex/bin/cli.js",
     "lint": "eslint src/**/*.ts --fix"
   },
   "keywords": [],
@@ -20,8 +21,10 @@
     "typescript-eslint": "^8.6.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^3.23.8"
   }
 }
