--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript-eslint": "^8.6.0"
   },
   "dependencies": {
+    "@fastify/cookie": "^10.0.1",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "knex": "^3.1.0",
