--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "knex": "^3.1.0",
+    "node": "^22.9.0",
     "pg": "^8.13.0",
     "zod": "^3.23.8"
   }
